--- a/.github/workflows/chart.yml
+++ b/.github/workflows/chart.yml
@@ -1,7 +1,7 @@
 name: GitHub-Profile-3D-Contrib
 
 on:
-  schedule: # 03:00 JST == 18:00 UTC
+  schedule:
     - cron: "0 */12 * * *"
 
 jobs:
@@ -14,11 +14,13 @@ jobs:
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           USERNAME: mdjannatulhasan
+      - name: Pull Changes from Remote
+        run: git pull origin main
       - name: Commit & Push
         run: |
           git config user.name github-actions
           git config user.email github-actions@github.com
-          git pull
           git add -A .
           git commit -m "generated"
-          git push
+          git push -f origin main
+
