--- a/.github/workflows/chart.yml
+++ b/.github/workflows/chart.yml
@@ -3,7 +3,9 @@ name: GitHub-Profile-3D-Contrib
 on:
   schedule:
     - cron: "0 */12 * * *"
-
+  # allows to manually run the job at any time
+  workflow_dispatch:
+  
 jobs:
   build:
     runs-on: ubuntu-latest
